# ChangeLog for sys-apps/coreutils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.280 2009/12/02 00:34:18 vapier Exp $

  02 Dec 2009; Mike Frysinger <vapier@gentoo.org> coreutils-8.1.ebuild:
  Force people to start migrating to xz-utils.

*coreutils-8.1 (19 Nov 2009)

  19 Nov 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-8.1.ebuild:
  Version bump #288253 by Rafał Mużyło.

  09 Nov 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.6.ebuild:
  Use new packager flags to tag binaries with Gentoo info.

  31 Oct 2009; Brent Baude <ranger@gentoo.org> coreutils-7.5-r1.ebuild:
  Marking coreutils-7.5 ppc64 for bug 287219

  21 Oct 2009; Jeroen Roovers <jer@gentoo.org> coreutils-7.5-r1.ebuild:
  Stable for HPPA (bug #287219).

*coreutils-7.5-r1 (18 Oct 2009)

  18 Oct 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-7.5-r1.ebuild:
  Add fix from newer versions for cp/mv problems on older kernels #289134 by
  Allen Brooker.

  12 Oct 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.5.ebuild,
  coreutils-7.6.ebuild:
  Inform people to reload their LS_COLOR env settings #288693 by Dirkjan
  Ochtman.

  10 Oct 2009; Raúl Porcel <armin76@gentoo.org> coreutils-7.5.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #287219

  09 Oct 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.6.ebuild:
  Add patch from upstream for mktemp build failures on some systems #288183
  by Alexey Charkov.

  07 Oct 2009; nixnut <nixnut@gentoo.org> coreutils-7.5.ebuild:
  ppc stable #287219

  05 Oct 2009; Markus Meier <maekke@gentoo.org> coreutils-7.5.ebuild:
  amd64/arm/x86 stable, bug #287219

  03 Oct 2009; Raúl Porcel <armin76@gentoo.org> coreutils-7.4.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #281699

*coreutils-7.6 (23 Sep 2009)

  23 Sep 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-7.6.ebuild:
  Version bump #284727 by Arfrever Frehtes Taifersar Arahesis.
