@@ -10,8 +10,11 @@ DIST coreutils-7.6-patches-2.tar.lzma 5394 RMD160 d32618ce5de121515957227a03cbe5
 DIST coreutils-7.6.tar.gz 10014650 RMD160 8d0741aabfc7bea9adc1e7d71ff36100c4afc3a2 SHA1 98880651bee000b1b31e1ee55ff8fabdad8eeecd SHA256 1d9bfe8b427ca5f8cffa0b462f861e4157c946fbeaf0884d273bbd6cab1c25d4
 DIST coreutils-8.1-patches-1.tar.lzma 5187 RMD160 85e626095e4539c4dec13559e06a0d027574d4d3 SHA1 f4eb2de113ec632cee071651956a210f57752886 SHA256 ed2d008cccee9b0c50eafc3d867a53b861b1db049038bc3763061e5d9d6add91
 DIST coreutils-8.1.tar.gz 10379352 RMD160 aac4a5cfa6afb0eae1d53aea060838f8c2281d5b SHA1 4a8bdbffa1201e51ca256292f43d0fc35e04adcc SHA256 5ea1adda4df2ad61e0184f5c7b08a2ad13db1a581d5da19610dd3c4718c1c8b0
+DIST coreutils-8.2-patches-1.tar.lzma 4449 RMD160 e499f7d3a31b3caaef41c8d5625428119e72cec5 SHA1 002fe6d9ce77bb054ded834394a54bf752335485 SHA256 f29b235347e208ab77a08dcb960df70820333f2798ffcb71011c504a3f058ce0
+DIST coreutils-8.2.tar.gz 10697533 RMD160 72ad3df1e0d2ebb982ce993e03410a11234b7acb SHA1 f25f9240f6da5400f36aebdd1e21e85110ab9f0f SHA256 d3c3055d16554ded9ec3b06f31337588179f15d715c4c32104ddf351f1ad4f41
 EBUILD coreutils-7.5-r1.ebuild 5961 RMD160 39b27a2762b9488c62e0aafc54a8582393c2f45e SHA1 c60a6866bb8a07f1812f7c7a580467cde1233c92 SHA256 a1c9f3c539e03e5a0a3979ad0e28226e489e81a6275ffb3654fa1a87625b9df4
 EBUILD coreutils-7.6.ebuild 6109 RMD160 9c1a730a8a48c49ea08fefe89ab73d583240fe16 SHA1 5e85533bdd2165d39169dbd52e1d380c80e163c8 SHA256 21139bfd490453b812561589bc182274d9ec4e3c7b9a7c36195250392e074cab
 EBUILD coreutils-8.1.ebuild 6082 RMD160 1c216aeae5de77c75bce8198b7f144c959cf1a0e SHA1 d11b2fd60b290ecc78e5f380c8524b39caa0c61f SHA256 ac33f9c68bdd37b378edd2549c7a4a926353912a1d514174922b8bb7d0d1afdc
-MISC ChangeLog 41315 RMD160 d01568c6b9fee956b908d3cea3acfdf71c0d1086 SHA1 37085a871a841cdb65cecc5e6702e9448265feb5 SHA256 8b8cd04145fd54db62faceb2461ec8cde2fba7b0dc2b8cf0cda2f1988cbd8ed8
+EBUILD coreutils-8.2.ebuild 6082 RMD160 d62b8b3d81231130c13e54f138f2408634db00a4 SHA1 eebf76154c6e57c15d832b4872c5956cf083f64c SHA256 098d32dcb8c8f7fa7105161e024ba413ed1eb0d9c04aa8c89eb4a54d5080945b
+MISC ChangeLog 41435 RMD160 34f7c0bc283b0de00074b53aa64c069bece83af2 SHA1 8ce7b3cce2d52f50e691ab111e94c7afecc416c7 SHA256 5a7d9da849a386da9440a9c6b164b3240601adeda1af99bd28aeb01f7486976d
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
