@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/coreutils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.280 2009/12/02 00:34:18 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.281 2009/12/11 20:21:08 vapier Exp $
+
+*coreutils-8.2 (11 Dec 2009)
+
+  11 Dec 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-8.2.ebuild:
+  Version bump.
 
   02 Dec 2009; Mike Frysinger <vapier@gentoo.org> coreutils-8.1.ebuild:
   Force people to start migrating to xz-utils.
